syntax = "proto3";

option go_package = "proto";

message Status {
    enum State {
        STOPPED = 0;
        STARTED = 1;
        PAUSED = 2;
    }

    State state = 1;
    TimeSheetEntryRef time_sheet_entry = 2;
}

message TimeSheetEntryRef {
    string date = 1;
    int64 index = 2;
}
